Warning cleanup