@@ -1,6 +1,6 @@
 package ru.tinkoff.kora.database.annotation.processor;
 
-import ru.tinkoff.kora.annotation.processor.common.CommonUtils;
+import ru.tinkoff.kora.annotation.processor.common.AnnotationUtils;
 import ru.tinkoff.kora.annotation.processor.common.ProcessingError;
 import ru.tinkoff.kora.annotation.processor.common.ProcessingErrorException;
 import ru.tinkoff.kora.common.naming.NameConverter;
@@ -9,7 +9,6 @@ import ru.tinkoff.kora.common.naming.SnakeCaseNameConverter;
 import javax.annotation.Nullable;
 import javax.lang.model.element.*;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 public class EntityUtils {
@@ -17,15 +16,10 @@ public class EntityUtils {
     private final static SnakeCaseNameConverter defaultColumnNameConverter = new SnakeCaseNameConverter();
 
     public static String parseColumnName(VariableElement element, @Nullable NameConverter columnsNameConverter) {
-        var column = CommonUtils.findDirectAnnotation(element, DbUtils.COLUMN_ANNOTATION);
+        var column = AnnotationUtils.findAnnotation(element, DbUtils.COLUMN_ANNOTATION);
         var fieldName = element.getSimpleName().toString();
         if (column != null) {
-            return column.getElementValues().entrySet().stream()
-                .findFirst()
-                .map(Map.Entry::getValue)
-                .map(AnnotationValue::getValue)
-                .map(Object::toString)
-                .get();
+            return AnnotationUtils.parseAnnotationValueWithoutDefault(column, "value");
         }
         return columnsNameConverter == null
             ? defaultColumnNameConverter.convert(fieldName)
@@ -38,7 +32,7 @@ public class EntityUtils {
             .filter(e -> e.getKind() == ElementKind.CONSTRUCTOR)
             .map(ExecutableElement.class::cast)
             .filter(e -> e.getModifiers().contains(Modifier.PUBLIC))
-            .collect(Collectors.toList());
+            .toList();
         if (constructors.isEmpty()) {
             throw new ProcessingErrorException(List.of(new ProcessingError("Entity type " + type + " has no public constructors", type)));
         }
@@ -46,8 +40,8 @@ public class EntityUtils {
             return constructors.get(0);
         }
         var entityConstructors = constructors.stream()
-            .filter(c -> CommonUtils.findDirectAnnotation(c, DbUtils.ENTITY_CONSTRUCTOR_ANNOTATION) != null)
-            .collect(Collectors.toList());
+            .filter(c -> AnnotationUtils.findAnnotation(c, DbUtils.ENTITY_CONSTRUCTOR_ANNOTATION) != null)
+            .toList();
         if (entityConstructors.isEmpty()) {
             throw new ProcessingErrorException(List.of(new ProcessingError("Entity type " + type + " has more than one public constructor and none of them is marked with @EntityConstructor", type)));
         }
